ns.app1.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: app1
spec: {}
status: {}
