ns.tomcat.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tomcat
spec: {}
status: {}
