svc-app1.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: svc-app1
spec:
  ports:
  - name: php73
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: nginx-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: nginx-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: app1
  type: NodePort
