svc-php73.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: svc-php73
spec:
  ports:
  - name: php73
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
   app: app1
  type: NodePort
