ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: svc-app1
              servicePort: 80
          - path: /admin
            backend:
              serviceName: svc-admin
              servicePort: 8066
